chore: Update .gitignore and requirements; add sentiment analysis script

--- a/webscraping_tensorflow.ipynb
+++ b/webscraping_tensorflow.ipynb
@@ -172,7 +172,7 @@
    "outputs": [],
    "source": [
     "# 2.1. Inisialisasi translator Google\n",
-    "translator = Translator()\n"
+    "translator = Translator()"
    ]
   },
   {
@@ -1101,7 +1101,7 @@
     "print(\"\\nMenyimpan hasil analisis...\")\n",
     "output_filename = 'datasets/ulasan_honkai_impact_3_processed.csv'\n",
     "clean_df.to_csv(output_filename, index=False, encoding='utf-8')\n",
-    "print(f\"✅ Dataset berhasil disimpan sebagai '{output_filename}'\")\n"
+    "print(f\"✅ Dataset berhasil disimpan sebagai '{output_filename}'\")"
    ]
   },
   {
@@ -1125,7 +1125,7 @@
     "    if isinstance(value, float):\n",
     "        print(f\"{key.replace('_', ' ').title()}: {value:.2f}\")\n",
     "    else:\n",
-    "        print(f\"{key.replace('_', ' ').title()}: {value}\")\n"
+    "        print(f\"{key.replace('_', ' ').title()}: {value}\")"
    ]
   },
   {
@@ -1142,7 +1142,7 @@
     "neu_pct = (summary_stats['sentimen_netral'] / summary_stats['total_ulasan']) * 100\n",
     "print(f\"   - Positif: {pos_pct:.1f}% ({summary_stats['sentimen_positif']} ulasan)\")\n",
     "print(f\"   - Negatif: {neg_pct:.1f}% ({summary_stats['sentimen_negatif']} ulasan)\")\n",
-    "print(f\"   - Netral: {neu_pct:.1f}% ({summary_stats['sentimen_netral']} ulasan)\")\n"
+    "print(f\"   - Netral: {neu_pct:.1f}% ({summary_stats['sentimen_netral']} ulasan)\")"
    ]
   },
   {
@@ -1155,7 +1155,7 @@
     "# 10.4. Karakteristik ulasan\n",
     "print(\"\\nKarakteristik ulasan:\")\n",
     "print(f\"   - Rata-rata panjang ulasan: {summary_stats['rata_rata_panjang_teks']:.1f} kata\")\n",
-    "print(f\"   - Kata yang paling sering muncul: '{summary_stats['kata_paling_sering']}'\")\n"
+    "print(f\"   - Kata yang paling sering muncul: '{summary_stats['kata_paling_sering']}'\")"
    ]
   },
   {
@@ -1170,7 +1170,7 @@
     "print(f\"   - Total ulasan yang berhasil diproses: {summary_stats['total_ulasan']}\")\n",
     "print(\"   - Data telah melalui preprocessing lengkap (cleaning, normalisasi, tokenisasi)\")\n",
     "print(\"   - Sentimen dilabeli menggunakan lexicon-based approach dengan Indonesian lexicon\")\n",
-    "print(\"   ✅ Pipeline berhasil memproses 100% data tanpa loss\")\n"
+    "print(\"   ✅ Pipeline berhasil memproses 100% data tanpa loss\")"
    ]
   },
   {
@@ -1190,7 +1190,7 @@
     "print(\"   → Positive/Negative/Neutral classification implemented with Indonesian lexicon\")\n",
     "print(\"✅ Goal 4: Actionable business insights - ACHIEVED\")\n",
     "print(\"   → Strategic recommendations provided based on sentiment analysis results\")\n",
-    "print(\"\\nGPU-ACCELERATED SENTIMENT ANALYSIS COMPLETED - MAXIMUM PERFORMANCE ACHIEVED\")\n"
+    "print(\"\\nGPU-ACCELERATED SENTIMENT ANALYSIS COMPLETED - MAXIMUM PERFORMANCE ACHIEVED\")"
    ]
   }
  ],
